<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">microlites</string>
    <string name="usbButtonLabel">USB</string>
    <string name="bluetoothButtonLabel">Conectar por Bluetooth</string>
    <string name="fileLogButtonLabel">Cargar log</string>
    <string name="viewWidthFullLabel">Ancho en segundos: 1.5</string>
    <string name="viewWidthLabel">Ancho en segundos:</string>
</resources>