<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/contentPanel"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

       <LinearLayout
           xmlns:android="http://schemas.android.com/apk/res/android"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_gravity="center_vertical"
           android:layout_marginBottom="20dip"
           android:gravity="center|center_vertical"
           android:orientation="vertical" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:drawableLeft="@drawable/ecg_icon"
				android:text="@string/app_name"
				android:textSize="72dp" />

			<TableLayout
				android:id="@+id/tableLayout1"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical|center_horizontal" >

				<TableRow
					android:id="@+id/tableRow1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal|center_vertical" >

					<Button
						android:id="@+id/startBluetoothButton"
						android:text="@string/bluetoothButtonLabel" />

					<Button
						android:id="@+id/startUsbButton"
						android:text="@string/usbButtonLabel" />

					<Button
						android:id="@+id/startLogButton"
						android:text="@string/fileLogButtonLabel" />
						
				</TableRow>

				<TableRow
					android:id="@+id/tableRow2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_horizontal" >

					<TextView
						android:id="@+id/textView1"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/viewWidthFullLabel"
						android:textAppearance="?android:attr/textAppearanceMedium" />

					<SeekBar
						android:id="@+id/seekBar1"
						android:layout_width="256dp"
						android:layout_height="wrap_content" />
						
				</TableRow>
				
			</TableLayout>
			
		</LinearLayout>

	</LinearLayout>
	
</LinearLayout>